# zero1

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cleanup-worktrees.sh  crates.js  help.html  integrate-worktrees.sh  plan.md  search-index.js  settings.html  setup-parallel-worktrees.sh  src-files.js
.github/: FIRST_RUN.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
benchmarks/: 8a57ad0.json
crates/z1-ast/: Cargo.toml
crates/z1-cli/: Cargo.toml
crates/z1-cli/src/: diagnostics.rs  error_printer.rs  lib.rs  main.rs
crates/z1-cli/src/commands/: bench.rs  compile.rs  mod.rs  prov.rs
crates/z1-cli/tests/: compile_integration.rs  diagnostics.rs  error_messages.rs  prov_integration.rs  stdlib_tests.rs
crates/z1-codegen-ts/: Cargo.toml  README.md
crates/z1-codegen-wasm/: Cargo.toml  README.md
crates/z1-ctx/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/z1-ctx/src/: lib.rs
crates/z1-ctx/tests/: estimator.rs
crates/z1-effects/: Cargo.toml
crates/z1-fmt/: Cargo.toml  PROGRESS.md
crates/z1-fmt/src/: lib.rs
crates/z1-fmt/tests/: formatter.rs
crates/z1-hash/: Cargo.toml
crates/z1-integration-tests/: Cargo.toml
crates/z1-ir/: Cargo.toml  README.md
crates/z1-lex/: Cargo.toml
crates/z1-parse/: Cargo.toml
crates/z1-parse/src/: lib.rs
crates/z1-parse/tests/: examples_api_server.rs  examples_cli_tool.rs  examples_processor.rs  examples_scheduler.rs  stdlib_crypto.rs  stdlib_env.rs  stdlib_fs.rs  stdlib_time.rs
crates/z1-policy/: Cargo.toml  README.md
crates/z1-prov/: Cargo.toml  README.md
crates/z1-prov/src/: chain.rs  lib.rs  signature.rs  types.rs  verify.rs
crates/z1-test/: Cargo.toml  README.md
crates/z1-test/src/: ast.rs  lexer.rs  lib.rs  parser.rs  runner.rs
crates/z1-test/tests/: integration_test.rs
crates/z1-typeck/: Cargo.toml  PROGRESS.md
docs/: M1-STATUS.md  benchmarks.md  ci.md  dependabot.md  design.md  fmt-plan.md  grammar.md  idea.md  vision.md
docs/adr/: 001-codegen-strategy.md
docs/dsl/: manifest.md  test.md
docs/tutorial/: 01-getting-started.md  02-language-tour.md  03-stdlib-reference.md  04-compilation.md  05-best-practices.md  06-migration.md  README.md
examples/api-server/: README.md  main.z1c  main.z1r
examples/cli-tool/: README.md  main.z1c  main.z1r
examples/config-loader/: README.md  main.z1c  main.z1r
examples/file-copy/: README.md  main.z1c  main.z1r
examples/http-hello/: main.z1c
examples/password-hash/: README.md  main.z1c  main.z1r
examples/processor/: README.md  (+3 more)
scripts/: cleanup-worktrees.sh  integrate-worktrees.sh  run_benchmarks.py  setup-parallel-worktrees.sh
z1_ast/: all.html  enum.BinOp.html  enum.ElseBlock.html  enum.Expr.html  enum.Item.html  enum.Literal.html  enum.Stmt.html  enum.TypeExpr.html  enum.UnaryOp.html  index.html  sidebar-items.js  struct.AssignStmt.html  struct.Block.html  struct.ExprStmt.html  struct.FnDecl.html  struct.IfStmt.html  struct.Import.html  struct.LetStmt.html  struct.Module.html  struct.ModulePath.html  struct.Param.html  struct.RecordField.html  struct.RecordInit.html  struct.ReturnStmt.html  struct.Span.html  struct.SymbolMap.html  struct.SymbolPair.html  struct.TypeDecl.html  struct.WhileStmt.html  type.Ident.html
z1_cli/: all.html  index.html  sidebar-items.js
z1_codegen_ts/: all.html  fn.generate_typescript.html  fn.generate_typescript_optimized.html  index.html  sidebar-items.js  struct.TsCodegen.html
z1_codegen_wasm/: all.html  fn.generate_wasm.html  fn.generate_wasm_binary.html  fn.generate_wasm_binary_optimized.html  fn.generate_wasm_optimized.html  fn.validate_wasm_binary.html  index.html  sidebar-items.js  struct.WasmCodegen.html
z1_ctx/: all.html  constant.DEFAULT_CHARS_PER_TOKEN.html  enum.CtxError.html  fn.estimate_cell.html  fn.estimate_cell_with_config.html  index.html  sidebar-items.js  struct.CellEstimate.html  struct.EstimateConfig.html  struct.FnEstimate.html
z1_effects/: all.html  enum.Effect.html  enum.EffectError.html  enum.EffectWarning.html  fn.can_call.html  fn.check_module.html  fn.collect_effect_warnings.html  index.html  sidebar-items.js  type.Result.html
z1_fmt/: all.html  enum.FmtError.html  enum.Mode.html  enum.SymMapStyle.html  fn.format_module.html  index.html  sidebar-items.js  struct.FmtOptions.html  struct.SymbolTable.html
z1_hash/: all.html  fn.module_hashes.html  index.html  sidebar-items.js  struct.ModuleHashes.html
z1_ir/: all.html  enum.IrBinOp.html  enum.IrExpr.html  enum.IrLiteral.html  enum.IrStmt.html  enum.IrType.html  enum.IrUnaryOp.html  enum.LoweringError.html  fn.lower_to_ir.html  index.html  sidebar-items.js  struct.IrBlock.html  struct.IrFunction.html  struct.IrImport.html  struct.IrModule.html  struct.IrTypeDef.html
z1_lex/: all.html  enum.TokenKind.html  fn.lex.html  index.html  struct.Token.html
z1_parse/: all.html  enum.ParseError.html  fn.parse_module.html  index.html  sidebar-items.js
z1_policy/: all.html  enum.PolicyViolation.html  index.html  sidebar-items.js  struct.PolicyChecker.html  struct.PolicyLimits.html
z1_prov/: all.html  enum.ChainError.html  enum.VerificationError.html  fn.compute_entry_hash.html  fn.keygen.html  fn.sign_entry.html  fn.verify_chain.html  fn.verify_chain_signatures.html  fn.verify_signature.html  index.html  sidebar-items.js  struct.ProvenanceChain.html  struct.ProvenanceEntry.html  struct.Signature.html  trait.ProvenanceChainExt.html
z1_test/: all.html  index.html  sidebar-items.js
z1_typeck/: all.html  enum.Type.html  enum.TypeError.html  enum.TypeWarning.html  fn.check_module.html  fn.collect_warnings.html  fn.type_from_ast.html  index.html  sidebar-items.js  struct.Context.html  struct.TypeChecker.html  struct.TypeEnv.html  type.TypeResult.html
(+262 files in other folders)
