[workspace]
members = [
  "crates/z1-ast",
  "crates/z1-lex",
  "crates/z1-parse",
  "crates/z1-fmt",
  "crates/z1-ctx",
  "crates/z1-typeck",
  "crates/z1-effects",
  "crates/z1-hash",
  "crates/z1-prov",
  "crates/z1-codegen-ts",
  "crates/z1-codegen-wasm",
  "crates/z1-cli",
  "crates/z1-policy",
  "crates/z1-test",
  "crates/z1-integration-tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
logos = "0.13"
rowan = "0.15"
camino = "1.1"
sha3 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
similar = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3.8"
