[package]
name = "z1-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
z1-ast = { path = "../z1-ast" }
z1-lex = { path = "../z1-lex" }
z1-parse = { path = "../z1-parse" }
z1-fmt = { path = "../z1-fmt" }
z1-typeck = { path = "../z1-typeck" }
z1-effects = { path = "../z1-effects" }
z1-hash = { path = "../z1-hash" }
z1-prov = { path = "../z1-prov" }
z1-codegen-ts = { path = "../z1-codegen-ts" }
z1-codegen-wasm = { path = "../z1-codegen-wasm" }
