[package]
name = "z1-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "z1-cli"
path = "src/main.rs"

[lib]
name = "z1_cli"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
z1-ast = { path = "../z1-ast" }
z1-lex = { path = "../z1-lex" }
z1-parse = { path = "../z1-parse" }
z1-fmt = { path = "../z1-fmt" }
z1-ctx = { path = "../z1-ctx" }
z1-typeck = { path = "../z1-typeck" }
z1-effects = { path = "../z1-effects" }
z1-hash = { path = "../z1-hash" }
z1-ir = { path = "../z1-ir" }
z1-prov = { path = "../z1-prov" }
z1-policy = { path = "../z1-policy" }
z1-codegen-ts = { path = "../z1-codegen-ts" }
z1-codegen-wasm = { path = "../z1-codegen-wasm" }
z1-test = { path = "../z1-test" }
colored.workspace = true
hex.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.8"
wasmparser = "0.240"
