[package]
name = "z1-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
thiserror.workspace = true
z1-ast = { path = "../z1-ast" }

[dev-dependencies]
z1-parse = { path = "../z1-parse" }
z1-hash = { path = "../z1-hash" }
